docs: AI Auto-translate README_CN to README